--- a/Insurrance.ipynb
+++ b/Insurrance.ipynb
@@ -10,7 +10,9 @@
     "#importing libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt"
+    "import matplotlib as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score"
    ]
   },
   {
@@ -222,8 +224,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5e9bd269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initialize linear regression model\n",
+    "model1 = LinearRegression()\n",
+    "model2 = LinearRegression()\n",
+    "model3 = LinearRegression()\n",
+    "\n",
+    "# Fit the models\n",
+    "model1.fit(df[top_predictors[0]].values.reshape(-1, 1), df['medicalCost'])\n",
+    "model2.fit(df[top_predictors[1]].values.reshape(-1, 1), df['medicalCost'])\n",
+    "model3.fit(df[top_predictors[2]].values.reshape(-1, 1), df['medicalCost'])\n",
+    "\n",
+    "# Make predictions for each model\n",
+    "predictions1 = model1.predict(df[top_predictors[0]].values.reshape(-1, 1))\n",
+    "predictions2 = model2.predict(df[top_predictors[1]].values.reshape(-1, 1))\n",
+    "predictions3 = model3.predict(df[top_predictors[2]].values.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "13607660",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance metrics for model 1:\n",
+      "MSE: 55720715.954185426\n",
+      "MAE: 5662.089609343061\n",
+      "R-squared: 0.6197648148218988\n",
+      "\n",
+      "Performance metrics for model 2:\n",
+      "MSE: 133440978.61376347\n",
+      "MAE: 9055.14962050455\n",
+      "R-squared: 0.08940589967885804\n",
+      "\n",
+      "Performance metrics for model 3:\n",
+      "MSE: 140777900.09850758\n",
+      "MAE: 9172.351145507564\n",
+      "R-squared: 0.03933913991786253\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate performance metrics\n",
+    "mse1 = mean_squared_error(df['medicalCost'], predictions1)\n",
+    "mae1 = mean_absolute_error(df['medicalCost'], predictions1)\n",
+    "r2_1 = r2_score(df['medicalCost'], predictions1)\n",
+    "mse2 = mean_squared_error(df['medicalCost'], predictions2)\n",
+    "mae2 = mean_absolute_error(df['medicalCost'], predictions2)\n",
+    "r2_2 = r2_score(df['medicalCost'], predictions2)\n",
+    "mse3 = mean_squared_error(df['medicalCost'], predictions3)\n",
+    "mae3 = mean_absolute_error(df['medicalCost'], predictions3)\n",
+    "r2_3 = r2_score(df['medicalCost'], predictions3)\n",
+    "# Print performance metrics\n",
+    "print(\"Performance metrics for model 1:\")\n",
+    "print(\"MSE:\", mse1)\n",
+    "print(\"MAE:\", mae1)\n",
+    "print(\"R-squared:\", r2_1)\n",
+    "print()\n",
+    "print(\"Performance metrics for model 2:\")\n",
+    "print(\"MSE:\", mse2)\n",
+    "print(\"MAE:\", mae2)\n",
+    "print(\"R-squared:\", r2_2)\n",
+    "print()\n",
+    "print(\"Performance metrics for model 3:\")\n",
+    "print(\"MSE:\", mse3)\n",
+    "print(\"MAE:\", mae3)\n",
+    "print(\"R-squared:\", r2_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "736a9cd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance metrics for Model 1:\n",
+      "MSE: 37005395.750507504\n",
+      "MAE: 4216.775692234115\n",
+      "R-squared: 0.7474771588119513\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initializing and predicting fit Model 1:\n",
+    "X_model1 = df[top_predictors].values\n",
+    "y_model1 = df['medicalCost'].values\n",
+    "model1 = LinearRegression()\n",
+    "model1.fit(X_model1, y_model1)\n",
+    "predictions_model1 = model1.predict(X_model1)\n",
+    "\n",
+    "#Calculating performance metrics for Model 1:\n",
+    "mse_model1 = mean_squared_error(y_model1, predictions_model1)\n",
+    "mae_model1 = mean_absolute_error(y_model1, predictions_model1)\n",
+    "r2_model1 = r2_score(y_model1, predictions_model1)\n",
+    "\n",
+    "#Printing Performance metrics\n",
+    "print(\"Performance metrics for Model 1:\")\n",
+    "print(\"MSE:\", mse_model1)\n",
+    "print(\"MAE:\", mae_model1)\n",
+    "print(\"R-squared:\", r2_model1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba8b3d11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance metrics for Model 2:\n",
+      "MSE: 36501893.00741544\n",
+      "MAE: 4170.886894163586\n",
+      "R-squared: 0.7509130345985207\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initializing and predicting fit Model 2:\n",
+    "X_model2 = df.drop(columns='medicalCost').values\n",
+    "y_model2 = df['medicalCost'].values\n",
+    "model2 = LinearRegression()\n",
+    "model2.fit(X_model2, y_model2)\n",
+    "predictions_model2 = model2.predict(X_model2)\n",
+    "\n",
+    "##Calculating performance metrics for Model 2:\n",
+    "mse_model2 = mean_squared_error(y_model2, predictions_model2)\n",
+    "mae_model2 = mean_absolute_error(y_model2, predictions_model2)\n",
+    "r2_model2 = r2_score(y_model2, predictions_model2)\n",
+    "\n",
+    "#Printing Performance metrics\n",
+    "print(\"Performance metrics for Model 2:\")\n",
+    "print(\"MSE:\", mse_model2)\n",
+    "print(\"MAE:\", mae_model2)\n",
+    "print(\"R-squared:\", r2_model2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0465139a",
    "metadata": {},
    "outputs": [],
    "source": []
